--- a/In_class_assignments_Notebook.ipynb
+++ b/In_class_assignments_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsyx+cxUPc94aRAHrd2Q1e",
+      "authorship_tag": "ABX9TyO76t+E6ptGMjGdftyTjHW+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,6 +100,80 @@
         "\n",
         "else:\n",
         "  print('Invalid operator')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for numberHours in range(1,9):\n",
+        "  fee = 5 + 2.5 * numberHours\n",
+        "  if fee <= 10:\n",
+        "    fee = 10.0\n",
+        "  elif fee >= 20:\n",
+        "    fee = 20.0\n",
+        "  print(numberHours,fee)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ULU62RTbMuVM",
+        "outputId": "21a665b3-a474-4f0a-8f6a-0c90d5b18a04"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10.0\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20.0\n",
+            "8 20.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "print('$Ad\\t', 'Profit')\n",
+        "for adCost in range(0,201,25):\n",
+        "  additional = 2 * round(math.sqrt(adCost))  #instead of adCost ** 0.5\n",
+        "  profit = (20 + additional) * 10 - 200 - adCost\n",
+        "  print(adCost, '\\t', profit)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WeMIDPd5PMA8",
+        "outputId": "dfddc633-4708-4d1c-93f9-be862c2605b9"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "$Ad\t Profit\n",
+            "0 \t 0\n",
+            "25 \t 75\n",
+            "50 \t 90\n",
+            "75 \t 105\n",
+            "100 \t 100\n",
+            "125 \t 95\n",
+            "150 \t 90\n",
+            "175 \t 85\n",
+            "200 \t 80\n"
+          ]
+        }
       ]
     }
   ]
