--- a/In_class_assignments_Notebook.ipynb
+++ b/In_class_assignments_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO76t+E6ptGMjGdftyTjHW+",
+      "authorship_tag": "ABX9TyNnjUoVAY60OJJSD0EuzROm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -172,6 +172,54 @@
             "150 \t 90\n",
             "175 \t 85\n",
             "200 \t 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "play = input('Do you want to play a game (yes/no)?')\n",
+        "\n",
+        "while play == 'yes':\n",
+        "  p1 = input('Player 1 - Choose between rock/paper/scissors: ')\n",
+        "  p2 = input('Player 2 - Choose between rock/paper/scissors: ')\n",
+        "\n",
+        "  if p1 == p2:\n",
+        "    print('Draw')\n",
+        "  elif p1 == 'Rock' and p2 == 'Scissors':  #can also use function or to create one bigger argument instead of 3\n",
+        "    print('Player 1 wins')\n",
+        "  elif p1 == 'Scissors' and p2 == 'Paper':\n",
+        "    print('Player 1 wins')\n",
+        "  elif p1 == 'Paper' and p2 == 'Rock':\n",
+        "    print('Player 1 wins')\n",
+        "  else:\n",
+        "    print('Player 2 wins')\n",
+        "\n",
+        "  play = input('Do you want to play a new game (yes/no)?')\n",
+        "\n",
+        "print('Good day!')\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DlitsP6649Qx",
+        "outputId": "17b2f487-654d-4187-fad5-6632b12893a8"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Do you want to play a game (yes/no)?yes\n",
+            "Player 1 - Choose between rock/paper/scissors: Paper\n",
+            "Player 2 - Choose between rock/paper/scissors: Rock\n",
+            "Player 1 wins\n",
+            "Do you want to play a new game (yes/no)?no\n",
+            "Good day!\n"
           ]
         }
       ]
