--- a/In_class_assignments_Notebook.ipynb
+++ b/In_class_assignments_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnjUoVAY60OJJSD0EuzROm",
+      "authorship_tag": "ABX9TyMIQrBg99QhEwJEDf8nD0n4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -218,6 +218,57 @@
             "Player 1 - Choose between rock/paper/scissors: Paper\n",
             "Player 2 - Choose between rock/paper/scissors: Rock\n",
             "Player 1 wins\n",
+            "Do you want to play a new game (yes/no)?no\n",
+            "Good day!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#another version of the game with random function\n",
+        "\n",
+        "import random\n",
+        "\n",
+        "play = input('Do you want to play a game (yes/no)?: ')\n",
+        "\n",
+        "while play == 'yes':\n",
+        "  p1 = input('Player - Choose between rock/paper/scissors:').capitalize()\n",
+        "  p2 = random.choice(['rock', 'paper', 'scissors']).capitalize()\n",
+        "\n",
+        "  print(f'Player chose {p1}; Computer chose {p2}')\n",
+        "\n",
+        "  if p1 == p2:\n",
+        "    print('Draw')\n",
+        "  elif ((p1 == 'Rock' and p2 == 'Scissors') or\n",
+        "  (p1 == 'Scissors' and p2 == 'Paper') or\n",
+        "   (p1 == 'Paper' and p2 == 'Rock')):\n",
+        "    print('Player wins')\n",
+        "  else:\n",
+        "    print('Computer wins!')\n",
+        "\n",
+        "  play = input('Do you want to play a new game (yes/no)?')\n",
+        "\n",
+        "print('Good day!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PmVagnjKV-sK",
+        "outputId": "2e47f1ce-e60f-4efd-e96f-60bc639af501"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Do you want to play a game (yes/no)?: yes\n",
+            "Player - Choose between rock/paper/scissors:Paper\n",
+            "Player chose Paper; Computer chose Rock\n",
+            "Player wins\n",
             "Do you want to play a new game (yes/no)?no\n",
             "Good day!\n"
           ]
