--- a/In_class_assignments_Notebook.ipynb
+++ b/In_class_assignments_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIQrBg99QhEwJEDf8nD0n4",
+      "authorship_tag": "ABX9TyM2s/p6Cu6Bqyyw/P+HNKPL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -271,6 +271,80 @@
             "Player wins\n",
             "Do you want to play a new game (yes/no)?no\n",
             "Good day!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst = []\n",
+        "\n",
+        "num = float(input('Please provide a number:'))\n",
+        "\n",
+        "while num != 0:\n",
+        "  lst.append(num)\n",
+        "  num = float(input('Please provide a number:'))\n",
+        "lst.sort(reverse=True)\n",
+        "print(lst)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MJmYcEd9CSER",
+        "outputId": "13b5763e-ecee-4b16-8a83-cc3a3f3d48f3"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please provide a number:5.6\n",
+            "Please provide a number:2.7\n",
+            "Please provide a number:1.608\n",
+            "Please provide a number:5.398\n",
+            "Please provide a number:0\n",
+            "[5.6, 5.398, 2.7, 1.608]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#other way to do it\n",
+        "\n",
+        "lst = []\n",
+        "\n",
+        "while True:\n",
+        "  num = float(input('Please provide a number:'))\n",
+        "  if num == 0.0:\n",
+        "    break\n",
+        "  lst.append(num)\n",
+        "lst.sort(reverse=True)\n",
+        "print(lst)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4DPZ8-3dD0xu",
+        "outputId": "19879b1c-f114-4a2f-f355-5f41377a8fee"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please provide a number:5\n",
+            "Please provide a number:8\n",
+            "Please provide a number:7\n",
+            "Please provide a number:4\n",
+            "Please provide a number:0\n",
+            "[8.0, 7.0, 5.0, 4.0]\n"
           ]
         }
       ]
