--- a/In_class_assignments_Notebook.ipynb
+++ b/In_class_assignments_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2s/p6Cu6Bqyyw/P+HNKPL",
+      "authorship_tag": "ABX9TyNjYKt7tMFY7/7wwsqDdovB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -345,6 +345,170 @@
             "Please provide a number:4\n",
             "Please provide a number:0\n",
             "[8.0, 7.0, 5.0, 4.0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "months = {}\n",
+        "\n",
+        "names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\",\"Nov\", \"Dec\"]\n",
+        "numbers = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "\n",
+        "for idx in range(len(numbers)):\n",
+        "  months[numbers[idx]] = names[idx]\n",
+        "months"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YI0dfQtglZHY",
+        "outputId": "7c495a5a-6f81-432a-df77-4b36a95af3f5"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'Jan',\n",
+              " 2: 'Feb',\n",
+              " 3: 'Mar',\n",
+              " 4: 'Apr',\n",
+              " 5: 'May',\n",
+              " 6: 'Jun',\n",
+              " 7: 'Jul',\n",
+              " 8: 'Aug',\n",
+              " 9: 'Sep',\n",
+              " 10: 'Oct',\n",
+              " 11: 'Nov',\n",
+              " 12: 'Dec'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#another way to do it\n",
+        "months = {}\n",
+        "\n",
+        "names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\",\"Nov\", \"Dec\"]\n",
+        "numbers = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "\n",
+        "cntr = 0\n",
+        "for num in numbers:\n",
+        "  months[num] = names[cntr]\n",
+        "  cntr += 1\n",
+        "months"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sRBdekD_mbwn",
+        "outputId": "5f98c9cf-ec70-4585-fac4-661a9adbc5a5"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'Jan',\n",
+              " 2: 'Feb',\n",
+              " 3: 'Mar',\n",
+              " 4: 'Apr',\n",
+              " 5: 'May',\n",
+              " 6: 'Jun',\n",
+              " 7: 'Jul',\n",
+              " 8: 'Aug',\n",
+              " 9: 'Sep',\n",
+              " 10: 'Oct',\n",
+              " 11: 'Nov',\n",
+              " 12: 'Dec'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#last way to do it\n",
+        "months = {}\n",
+        "\n",
+        "names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\",\"Nov\", \"Dec\"]\n",
+        "numbers = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "\n",
+        "for i in range(len(names)):\n",
+        "  months[numbers[i]] = names[i]\n",
+        "\n",
+        "print(months)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jld_8JI0iPYl",
+        "outputId": "d3ed990e-dc20-4692-990d-9cbb22221926"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 'Jan', 2: 'Feb', 3: 'Mar', 4: 'Apr', 5: 'May', 6: 'Jun', 7: 'Jul', 8: 'Aug', 9: 'Sep', 10: 'Oct', 11: 'Nov', 12: 'Dec'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "counts = {}\n",
+        "\n",
+        "while len(counts) < 5:\n",
+        "  key = input('Please provide a string:')\n",
+        "\n",
+        "  if key not in counts:\n",
+        "    counts[key] = 1\n",
+        "  else:\n",
+        "    counts[key] += 1\n",
+        "\n",
+        "print(counts)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nHvz7NlZo2W0",
+        "outputId": "d530ad7d-b4af-49f5-f750-0a8174970ab1"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please provide a string:a\n",
+            "Please provide a string:b\n",
+            "Please provide a string:c\n",
+            "Please provide a string:d\n",
+            "Please provide a string:a\n",
+            "Please provide a string:a\n",
+            "Please provide a string:a\n",
+            "Please provide a string:e\n",
+            "{'a': 4, 'b': 1, 'c': 1, 'd': 1, 'e': 1}\n"
           ]
         }
       ]
