--- a/In_class_assignments_Notebook.ipynb
+++ b/In_class_assignments_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjYKt7tMFY7/7wwsqDdovB",
+      "authorship_tag": "ABX9TyP39sVTmtgnasLvX36vuRXi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "id": "_qhdRcFkhlpK",
         "outputId": "5e502b4d-4b1a-46b8-ca44-9b10a6e30fa5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -120,7 +120,7 @@
         "id": "ULU62RTbMuVM",
         "outputId": "21a665b3-a474-4f0a-8f6a-0c90d5b18a04"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
         "id": "WeMIDPd5PMA8",
         "outputId": "dfddc633-4708-4d1c-93f9-be862c2605b9"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,8 +198,7 @@
         "\n",
         "  play = input('Do you want to play a new game (yes/no)?')\n",
         "\n",
-        "print('Good day!')\n",
-        ""
+        "print('Good day!')\n"
       ],
       "metadata": {
         "colab": {
@@ -208,7 +207,7 @@
         "id": "DlitsP6649Qx",
         "outputId": "17b2f487-654d-4187-fad5-6632b12893a8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +258,7 @@
         "id": "PmVagnjKV-sK",
         "outputId": "2e47f1ce-e60f-4efd-e96f-60bc639af501"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +294,7 @@
         "id": "MJmYcEd9CSER",
         "outputId": "13b5763e-ecee-4b16-8a83-cc3a3f3d48f3"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +332,7 @@
         "id": "4DPZ8-3dD0xu",
         "outputId": "19879b1c-f114-4a2f-f355-5f41377a8fee"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +367,7 @@
         "id": "YI0dfQtglZHY",
         "outputId": "7c495a5a-6f81-432a-df77-4b36a95af3f5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +414,7 @@
         "id": "sRBdekD_mbwn",
         "outputId": "5f98c9cf-ec70-4585-fac4-661a9adbc5a5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +460,7 @@
         "id": "jld_8JI0iPYl",
         "outputId": "d3ed990e-dc20-4692-990d-9cbb22221926"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +493,7 @@
         "id": "nHvz7NlZo2W0",
         "outputId": "d530ad7d-b4af-49f5-f750-0a8174970ab1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,6 +508,42 @@
             "Please provide a string:a\n",
             "Please provide a string:e\n",
             "{'a': 4, 'b': 1, 'c': 1, 'd': 1, 'e': 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours):\n",
+        "  fee = 5 + 2.5 * hours\n",
+        "  if fee <= 10:\n",
+        "    fee = 10.0\n",
+        "  elif fee >= 20:\n",
+        "    fee = 20.0\n",
+        "  print(f'Fee: {fee}$')\n",
+        "  return\n",
+        "\n",
+        "print('Program starts...')\n",
+        "numHours = int(input('Enter number of hours:'))\n",
+        "calcFee(numHours)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AWt8f80pXZzc",
+        "outputId": "6bae156d-bca6-429f-ae6d-8e87cbe2ed6f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Program starts...\n",
+            "Enter number of hours:5\n",
+            "Fee: 17.5$\n"
           ]
         }
       ]
