--- a/In_class_assignments_Notebook.ipynb
+++ b/In_class_assignments_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP39sVTmtgnasLvX36vuRXi",
+      "authorship_tag": "ABX9TyNYdJXr4yth7YkX56MROVWt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -517,12 +517,11 @@
       "source": [
         "def calcFee(hours):\n",
         "  fee = 5 + 2.5 * hours\n",
-        "  if fee <= 10:\n",
+        "  if fee < 10:\n",
         "    fee = 10.0\n",
-        "  elif fee >= 20:\n",
+        "  elif fee > 20:\n",
         "    fee = 20.0\n",
         "  print(f'Fee: {fee}$')\n",
-        "  return\n",
         "\n",
         "print('Program starts...')\n",
         "numHours = int(input('Enter number of hours:'))\n",
@@ -533,9 +532,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AWt8f80pXZzc",
-        "outputId": "6bae156d-bca6-429f-ae6d-8e87cbe2ed6f"
+        "outputId": "f26485ff-f5f0-4f1b-a53a-1df670d8c3d4"
       },
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
