--- a/In_class_assignments_Notebook.ipynb
+++ b/In_class_assignments_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYdJXr4yth7YkX56MROVWt",
+      "authorship_tag": "ABX9TyPx9vI6CL4X6Mb/B8ihJYB6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -522,25 +522,27 @@
         "  elif fee > 20:\n",
         "    fee = 20.0\n",
         "  print(f'Fee: {fee}$')\n",
+        "  return\n",
         "\n",
-        "print('Program starts...')\n",
-        "numHours = int(input('Enter number of hours:'))\n",
-        "calcFee(numHours)"
+        "def main():\n",
+        "  numHours = int(input('Enter number of hours:'))\n",
+        "  calcFee(numHours)\n",
+        "\n",
+        "main()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AWt8f80pXZzc",
-        "outputId": "f26485ff-f5f0-4f1b-a53a-1df670d8c3d4"
+        "outputId": "689c798b-d4d5-4970-a492-1daa74345a63"
       },
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Program starts...\n",
             "Enter number of hours:5\n",
             "Fee: 17.5$\n"
           ]
