--- a/In_class_assignments_Notebook.ipynb
+++ b/In_class_assignments_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPx9vI6CL4X6Mb/B8ihJYB6",
+      "authorship_tag": "ABX9TyM9IzmBVmVr5WPhZopZ9MEK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -537,7 +537,7 @@
         "id": "AWt8f80pXZzc",
         "outputId": "689c798b-d4d5-4970-a492-1daa74345a63"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,6 +546,42 @@
             "Enter number of hours:5\n",
             "Fee: 17.5$\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse(s):\n",
+        "  if len(s) == 1:\n",
+        "    return s\n",
+        "  else:\n",
+        "    return s[-1] + reverse(s[:-1])\n",
+        "\n",
+        "reverse('Hello')"
+      ],
+      "metadata": {
+        "id": "44rylrJzp8_Z",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "dc25f2a4-0258-4151-b972-dae4855861e3"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'olleH'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
         }
       ]
     }
