--- a/In_class_assignments_Notebook_Updated.ipynb
+++ b/In_class_assignments_Notebook_Updated.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWhLzsKlR8r312IVnOeIwk",
+      "authorship_tag": "ABX9TyOOwiVZ0vOp0tKBpxrm22ox",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -617,7 +617,7 @@
         "id": "OkgJGTqaDNZq",
         "outputId": "839093fa-3a62-453d-e7ea-7eaac22da942"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +661,7 @@
         "id": "WvR0yAElHS2E",
         "outputId": "eae275e1-09be-4802-9778-49ec05287e2b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -669,6 +669,38 @@
           "text": [
             "Enter size of the list:0\n",
             "List [] is empty!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Greeting:\n",
+        "  def __init__(self, first, last):\n",
+        "    self.first = first\n",
+        "    self.last = last\n",
+        "\n",
+        "  def display(self):\n",
+        "    print(f'Hi {self.first}')\n",
+        "\n",
+        "greeting = Greeting('Donald', 'Becker')\n",
+        "greeting.display()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wCTlRDNhJZBz",
+        "outputId": "5af004dd-6ced-4978-aedf-08e85ce83f87"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi Donald\n"
           ]
         }
       ]
