--- a/In_class_assignments_Notebook_Updated.ipynb
+++ b/In_class_assignments_Notebook_Updated.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOwiVZ0vOp0tKBpxrm22ox",
+      "authorship_tag": "ABX9TyOpIE6K9OK90oCE1sou/en9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -681,26 +681,34 @@
         "    self.first = first\n",
         "    self.last = last\n",
         "\n",
-        "  def display(self):\n",
-        "    print(f'Hi {self.first}')\n",
+        "  def display(self, formal=False):\n",
+        "    if formal:\n",
+        "      print(f'Hi {self.first} {self.last}')\n",
+        "    else:\n",
+        "      print(f'Hi {self.first}')\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return f'{self.first}, {self.last}'\n",
         "\n",
         "greeting = Greeting('Donald', 'Becker')\n",
-        "greeting.display()"
+        "greeting.display(formal=True)\n",
+        "print(greeting)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wCTlRDNhJZBz",
-        "outputId": "5af004dd-6ced-4978-aedf-08e85ce83f87"
+        "outputId": "84973141-cdc7-4c14-b177-9a08dea031b6"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hi Donald\n"
+            "Hi Donald Becker\n",
+            "Donald, Becker\n"
           ]
         }
       ]
