--- a/In_class_assignments_Notebook_Updated.ipynb
+++ b/In_class_assignments_Notebook_Updated.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpIE6K9OK90oCE1sou/en9",
+      "authorship_tag": "ABX9TyO4ETrCl6YFjJlsmcwKpMzL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -701,7 +701,7 @@
         "id": "wCTlRDNhJZBz",
         "outputId": "84973141-cdc7-4c14-b177-9a08dea031b6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,6 +710,99 @@
             "Hi Donald Becker\n",
             "Donald, Becker\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, number):\n",
+        "    self.name = name\n",
+        "    self.number = number\n",
+        "    self.courses = []\n",
+        "\n",
+        "  def enroll(self, course):\n",
+        "    if course in self.courses:\n",
+        "      print(f'You have already enrolled in {course}')\n",
+        "    else:\n",
+        "      self.courses.append(course)\n",
+        "\n",
+        "  def get_courses(self):\n",
+        "    return self.courses\n",
+        "\n",
+        "student1 = Student(\"James Bond\", \"007\")\n",
+        "student2 = Student(\"Clark Kent\", \"333\")\n",
+        "\n",
+        "print(student1.name)\n",
+        "print(student2.name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qNLp5rXMqfyq",
+        "outputId": "51fd4c9f-1deb-4733-ea54-394506daa0f5"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "James Bond\n",
+            "Clark Kent\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "student1.enroll(\"BTE320\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RgLn0flTwpCK",
+        "outputId": "e8fbfed4-da17-45d0-b3e7-1a681413f274"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You have already enrolled in BTE320\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#testing for courses enrolled with method get_courses\n",
+        "student1.get_courses()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5wA6vbsXwwqb",
+        "outputId": "f6e34a97-460c-4ede-f36b-6428b6f9a128"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['BTE320']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     }
