--- a/In_class_assignments_Notebook_Updated.ipynb
+++ b/In_class_assignments_Notebook_Updated.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4ETrCl6YFjJlsmcwKpMzL",
+      "authorship_tag": "ABX9TyOMB7PzfygP7ql2Sc95yHhZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -744,7 +744,7 @@
         "id": "qNLp5rXMqfyq",
         "outputId": "51fd4c9f-1deb-4733-ea54-394506daa0f5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +768,7 @@
         "id": "RgLn0flTwpCK",
         "outputId": "e8fbfed4-da17-45d0-b3e7-1a681413f274"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,7 +792,7 @@
         "id": "5wA6vbsXwwqb",
         "outputId": "f6e34a97-460c-4ede-f36b-6428b6f9a128"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,6 +803,70 @@
           },
           "metadata": {},
           "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "class Point:\n",
+        "  def __init__(self, x, y):\n",
+        "    self.x = x\n",
+        "    self.y = y\n",
+        "\n",
+        "  def distance(self,other):\n",
+        "    return math.sqrt((self.x - other.x) ** 2 + (self.y - other.y) ** 2)"
+      ],
+      "metadata": {
+        "id": "FO6hnZ6eNzhO"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Rectangle:\n",
+        "  def __init__(self):\n",
+        "    self.c1 = Point(0,0)\n",
+        "    self.c2 = Point(0,2)\n",
+        "    self.c3 = Point(2,0)\n",
+        "    self.c4 = Point(2,2)\n",
+        "    self.width = self.calculate_width()\n",
+        "    self.height = self.calculate_height()\n",
+        "\n",
+        "  def calculate_width(self):\n",
+        "    return self.c1.distance(self.c2)\n",
+        "\n",
+        "  def calculate_height(self):\n",
+        "    return self.c3.distance(self.c4)\n",
+        "\n",
+        "  def area(self):\n",
+        "    return self.width * self.height\n",
+        "\n",
+        "square = Rectangle()\n",
+        "square.area()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lNx_yC2jaoDR",
+        "outputId": "ce835f07-7e70-4acd-b712-30bcd06edf8d"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     }
