--- a/In_class_assignments_Notebook_Updated.ipynb
+++ b/In_class_assignments_Notebook_Updated.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMB7PzfygP7ql2Sc95yHhZ",
+      "authorship_tag": "ABX9TyOBDOV+w06QE99P1E3YU9Ry",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -588,7 +588,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#New version of def calcFee assignment with errors exceptions\n",
+        "#New version of def calcFee assignment with exception handling\n",
         "def calcFee(hours):\n",
         "  fee = 5 + 2.5 * hours\n",
         "  if fee < 10:\n",
@@ -822,7 +822,7 @@
       "metadata": {
         "id": "FO6hnZ6eNzhO"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -856,7 +856,7 @@
         "id": "lNx_yC2jaoDR",
         "outputId": "ce835f07-7e70-4acd-b712-30bcd06edf8d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
